html et css sidebar et icones

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script defer src="./index.js"></script>
 
   <title>Sidebar</title>
@@ -12,14 +16,42 @@
 
 <body>
   <header>
+    <div class="sidebar" id="sidebar">
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+      <div class="icone-xmark">
+        <i class="fa-solid fa-xmark" id="xmark"></i>
+      </div>
+    </div>
 
   </header>
   <main>
+    <!-- <i class="fa-solid fa-bars" id="bars"></i> -->
     <h1>SIDEBAR IS LIFE</h1>
     <div class="paragraphes">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat nam error quaerat quos consectetur, esse obcaecati voluptatum! Necessitatibus adipisci harum pariatur distinctio voluptatibus, facilis excepturi ullam eum molestias, voluptates consectetur. Culpa minus hic iusto porro fuga accusamus, suscipit officia alias impedit nisi, quaerat veritatis neque dignissimos ipsa distinctio soluta cupiditate voluptatibus architecto totam temporibus necessitatibus quis a possimus id? Error reiciendis at nostrum, impedit tempora accusantium maiores ipsam possimus reprehenderit ipsa. Repellendus pariatur beatae, porro voluptatem consectetur enim sunt dolor nam laborum cupiditate debitis minima omnis, nobis, dolorem neque expedita sequi laboriosam saepe corporis? Quam quasi quae tempore voluptatum architecto.</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat nam error quaerat quos consectetur, esse obcaecati voluptatum! Necessitatibus adipisci harum pariatur distinctio voluptatibus, facilis excepturi ullam eum molestias, voluptates consectetur. Culpa minus hic iusto porro fuga accusamus, suscipit officia alias impedit nisi, quaerat veritatis neque dignissimos ipsa distinctio soluta cupiditate voluptatibus architecto totam temporibus necessitatibus quis a possimus id? Error reiciendis at nostrum, impedit tempora accusantium maiores ipsam possimus reprehenderit ipsa. Repellendus pariatur beatae, porro voluptatem consectetur enim sunt dolor nam laborum cupiditate debitis minima omnis, nobis, dolorem neque expedita sequi laboriosam saepe corporis? Quam quasi quae tempore voluptatum architecto.</p>
-  </div>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat nam error quaerat quos consectetur, esse
+        obcaecati voluptatum! Necessitatibus adipisci harum pariatur distinctio voluptatibus, facilis excepturi ullam
+        eum molestias, voluptates consectetur. Culpa minus hic iusto porro fuga accusamus, suscipit officia alias
+        impedit nisi, quaerat veritatis neque dignissimos ipsa distinctio soluta cupiditate voluptatibus architecto
+        totam temporibus necessitatibus quis a possimus id? Error reiciendis at nostrum, impedit tempora accusantium
+        maiores ipsam possimus reprehenderit ipsa. Repellendus pariatur beatae, porro voluptatem consectetur enim sunt
+        dolor nam laborum cupiditate debitis minima omnis, nobis, dolorem neque expedita sequi laboriosam saepe
+        corporis? Quam quasi quae tempore voluptatum architecto.</p><br>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat nam error quaerat quos consectetur, esse
+        obcaecati voluptatum! Necessitatibus adipisci harum pariatur distinctio voluptatibus, facilis excepturi ullam
+        eum molestias, voluptates consectetur. Culpa minus hic iusto porro fuga accusamus, suscipit officia alias
+        impedit nisi, quaerat veritatis neque dignissimos ipsa distinctio soluta cupiditate voluptatibus architecto
+        totam temporibus necessitatibus quis a possimus id? Error reiciendis at nostrum, impedit tempora accusantium
+        maiores ipsam possimus reprehenderit ipsa. Repellendus pariatur beatae, porro voluptatem consectetur enim sunt
+        dolor nam laborum cupiditate debitis minima omnis, nobis, dolorem neque expedita sequi laboriosam saepe
+        corporis? Quam quasi quae tempore voluptatum architecto.</p>
+    </div>
   </main>
 
 </body>
