Ouverture et fermeture sidebar

--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
           <li>Contacts</li>
         </ul>
       </nav>
-      <div class="icone-xmark">
+      <button class="close-btn" id="closeBtn">
         <i class="fa-solid fa-xmark" id="xmark"></i>
-      </div>
+      </button>
+      <button class="open-btn" id="openBtn">
+        <i class="fa-solid fa-bars" id="bars"></i>
+      </button>
     </div>
+
 
   </header>
   <main>
-    <!-- <i class="fa-solid fa-bars" id="bars"></i> -->
     <h1>SIDEBAR IS LIFE</h1>
     <div class="paragraphes">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat nam error quaerat quos consectetur, esse
