Fond d'écran devient opaque quand sidebar open

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
         <i class="fa-solid fa-bars" id="bars"></i>
       </button>
     </div>
-
-
   </header>
-  <main>
+
+  <main id="main">
     <h1>SIDEBAR IS LIFE</h1>
     <div class="paragraphes">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat nam error quaerat quos consectetur, esse
