--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+ 
   <script defer src="./index.js"></script>
 
   <title>Sidebar</title>
@@ -17,6 +15,13 @@
 <body>
   <header>
     <div class="sidebar" id="sidebar">
+
+      <div class="toggle-btn" id="btn">
+        <span  class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+
       <nav>
         <ul>
           <li>Home</li>
@@ -25,17 +30,11 @@
           <li>Contacts</li>
         </ul>
       </nav>
-      <button class="close-btn" id="closeBtn">
-        <i class="fa-solid fa-xmark" id="xmark"></i>
-      </button>
-      <button class="open-btn" id="openBtn">
-        <i class="fa-solid fa-bars" id="bars"></i>
-      </button>
     </div>
   </header>
 
-  <main id="main">
-    <h1>SIDEBAR IS LIFE</h1>
+  <main class="content">
+    <h1>Sidebar is life</h1>
     <div class="paragraphes">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat nam error quaerat quos consectetur, esse
         obcaecati voluptatum! Necessitatibus adipisci harum pariatur distinctio voluptatibus, facilis excepturi ullam
